--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -21,11 +21,12 @@
     // Rotate Into X With Menu Lines
     &.close {
         transform: rotate(180deg);
+        
 
         .btn-line {
             // line 1-rotate
             &:nth-child(1) {
-                background: red;
+                transform: rotate(45deg) translate(5px, 5px);
             }
 
             //line 2- hide
