--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -111,7 +111,7 @@
     }
 
 
-    .nav.item {
+    .nav-item {
         transform: translate3d(600px, 0, 0);
         @include easeOut;
 
@@ -120,7 +120,35 @@
             //slide in from right
             transform: translate3d(0, 0, 0);
         }
+
+
+        &.current > a {
+            color: $secondary-color;
+        }
+
     }
+
+
+//right menu stil
+
+.nav-link {
+    display: inline-block;
+    position: relative;
+    font-size: 30px;
+    text-transform: uppercase;
+    padding: 1rem 0;
+    font-weight: 300;
+    color: #fff;
+    text-decoration: none;
+    @include easeOut;
+
+
+    &:hover {
+        color: $secondary-color;
+    }
+
+}
+
 
 
 
