Added media queries and made menu overlay responsive

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -30,3 +30,35 @@ $background-opacity: 0.8;
          
     }
 }
+
+// media query mixins
+//mediasmall
+@mixin mediaSm {
+    @media screen and (max-width: 500px) {
+        @content;
+    }
+}
+
+
+//mediamedium
+@mixin mediaMd {
+    @media screen and (max-width: 768px) {
+        @content;
+    }
+}
+
+
+//mediaLarge
+@mixin mediaLg {
+    @media screen and (min-width: 769px) and (max-width: 1170px) {
+        @content;
+    }
+}
+
+
+//mediaXL
+@mixin mediaXL {
+    @media screen and (min-width: 1171px) {
+        @content;
+    }
+}
