--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -52,7 +52,7 @@
     position: fixed;
     top: 0;
     width: 100%;
-    opacity: 0.9;
+    
     visibility: hidden;
     
     &.show {
@@ -69,12 +69,13 @@
         width: 50%;
         height: 100vh;
         overflow: hidden;
+        background: rgba($primary-color,0.9);
     }
 
 &-nav {
     margin: 0;
     padding: 0;
-    background: darken($primary-color, 5);
+    background: rgba(darken($primary-color, 5),0.9);
     list-style: none;
     transform: translate3d(0, -100%, 0);
     @include easeOut;
