--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -50,6 +50,17 @@
     }
 
     
+    .about-info {
+        grid-template-areas: 
+        'bioimage'
+        'bio'
+        'job1'
+        'job2'
+        'job3';
+
+        grid-template-columns: 1fr;
+    }
+
 }
 
 // smartphones
