--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,7 +3,7 @@
 
 
 * {
-    box-sizing: border-box;
+    box-sizing: border-box;    
 }
 
 body {
@@ -76,7 +76,7 @@ main {
     }
 }
 
-////ABOUT //////
+////ABOUT PAGE START//////////////////////////
 
 .about-info {
     display: grid;
@@ -117,7 +117,59 @@ main {
         border-top: $secondary-color 2px solid;
     }
 }
+////ABOUT PAGE END//////////////////////////
 
+
+
+
+////WORK PAGE START/////////////////////
+
+.projects {
+    display: grid;
+    grid-gap: 0.7rem;
+    
+
+    img {
+        width: 100%;
+        border: 3px #fff solid;
+
+        &:hover {
+            opacity: 0.5;
+            border-color: $secondary-color;
+            @include easeOut;
+        }
+    }
+    }
+///work page button styles
+.btn {
+    display: block;
+    padding: 0.5rem 1rem;
+    border: 0;
+    margin-bottom: 0.3rem;
+    text-align: center;
+    &:hover {
+        background: $secondary-color;
+        color: set-text-color($secondary-color);
+    }
+}
+
+.btn-dark {
+@extend .btn;
+background: darken($primary-color, 50);
+color : #fff;
+}
+
+.btn-light {
+@extend .btn;
+background: lighten($primary-color, 50);
+color : #333;
+}
+
+
+
+
+////footer/////
+ 
 #main-footer {
     text-align: center;
     padding: 1rem;
@@ -125,5 +177,7 @@ main {
     color: set-text-color($primary-color);
     height: 60px;
 }
+
+
 
 @import 'mobile';
