Initial website finished

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -31,6 +31,15 @@ $background-opacity: 0.8;
     }
 }
 
+// SET TEXT COLOR
+@function set-text-color($color) {
+    @if (lightness($color) > 40) {
+        @return #000;
+    } @else {
+        @return #fff;
+    }
+}
+
 // media query mixins
 //mediasmall
 @mixin mediaSm {
